crates/carta/tests/snapshots/golden_e2e__org__html__block-quote.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<blockquote>
<p>A quoted paragraph inside a block quote.</p>
<p>A second quoted paragraph.</p>
</blockquote>
