crates/carta/tests/snapshots/golden_e2e__org__html__comments.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>Visible paragraph text remains.</p>
