crates/carta/tests/snapshots/golden_e2e__org__html__entities.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>Greek letters α, β, and γ render as symbols.</p>
