crates/carta/tests/snapshots/golden_e2e__org__html__fixed-width.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<pre><code>fixed-width line one
fixed-width line two
</code></pre>
