crates/carta/tests/snapshots/golden_e2e__org__html__footnotes-followed-by-table.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>See the note<a href="#fn1" class="footnote-ref" id="fnref1"
role="doc-noteref"><sup>1</sup></a> below.</p>
<section id="footnotes" class="footnotes footnotes-end-of-document"
role="doc-endnotes">
<hr />
<ol>
<li id="fn1"><p>The note body paragraph.</p>
<table>
<tbody>
<tr>
<td>Column A</td>
<td>Column B</td>
</tr>
<tr>
<td>1</td>
<td>2</td>
</tr>
</tbody>
</table>
<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></li>
</ol>
</section>
