crates/carta/tests/snapshots/golden_e2e__org__html__footnotes.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>Here is a simple footnote<a href="#fn1" class="footnote-ref"
id="fnref1" role="doc-noteref"><sup>1</sup></a> reference.</p>
<section id="footnotes" class="footnotes footnotes-end-of-document"
role="doc-endnotes">
<hr />
<ol>
<li id="fn1"><p>The footnote definition body.<a href="#fnref1"
class="footnote-back" role="doc-backlink">↩︎</a></p></li>
</ol>
</section>
