crates/carta/tests/snapshots/golden_e2e__org__html__links.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>A described link <a href="https://example.com">Example Site</a> and a
plain link <a href="https://example.org">https://example.org</a>.</p>
